--- a/navbar.html
+++ b/navbar.html
@@ -49,7 +49,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Consultas <sup class="badge bg-danger">1</sup></a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="generadorReportes.html">Generador</a></li>
+            <li><a class="dropdown-item" href="generarReporte.html">Generador de reporte</a></li>
             <li><hr class="dropdown-divider"></hr></li>
           </ul>
         </li>
