--- a/editarFicha.html
+++ b/editarFicha.html
@@ -9,6 +9,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="util.js"></script>
   <script src="ProyectosManager.js"></script>
+  <script>        const letras = [
+    'g', 'h', 'p', '_', 'F', 'g', 'Y', 'w', 'P', 'C',
+    'Y', 'R', 'M', 'v', 'l', 'f', 'A', 'p', 'Y', 'Z',
+    '7', 'e', 'v', 'q', 'a', 'W', 'a', 'e', 'o', '3',
+    'M', 'q', '3', 'B', '2', 'N', 't', 's', 'o', 'E'
+  ];
+</script>
 </head>
 <body>
     <div id="navbar"></div>
