--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <title>AIT LS CyS Gestion de Proyectos</title>
     <meta charset="utf-8">
