--- a/carteraProyectos.html
+++ b/carteraProyectos.html
@@ -16,7 +16,7 @@
 <script>
 addContentHTML('navbar','navbar.html');
 // Uso de la clase
-const url = 'proyectos.json'; // Reemplaza con la URL de tu archivo JSON
+const url = 'https://pdvsaaitcys.github.io/proyectos/proyectos.json'; // Reemplaza con la URL de tu archivo JSON
 let camposTabla
 if (esMovil()) {
   camposTabla = ['Código', 'Nombre', "Líder Técnico"];
