--- a/generarReporte.html
+++ b/generarReporte.html
@@ -43,7 +43,7 @@
 </div>
 
 <script>
-    const url = 'proyectos.json'; // Reemplaza con la URL de tu archivo JSON
+    const url = 'https://pdvsaaitcys.github.io/proyectos/proyectos.json'; // Reemplaza con la URL de tu archivo JSON
     const proyectos = new ProyectosManager(url);
     const oForm = document.getElementById('form');
     proyectos.checkFields(oForm);
