--- a/fichaCompleta.html
+++ b/fichaCompleta.html
@@ -16,7 +16,7 @@
 <script>
 addContentHTML('navbar','navbar.html');
 // Uso de la clase
-const url = 'proyectos.json'; // Reemplaza con la URL de tu archivo JSON
+const url = 'https://pdvsaaitcys.github.io/proyectos/proyectos.json'; // Reemplaza con la URL de tu archivo JSON
 const codigoProyecto = getFieldFromLocation('codigo'); // Reemplaza 'nombreCampo' con el campo que desees
 const proyectos = new ProyectosManager(url);
 proyectos.mostrarFicha(codigoProyecto,"ficha-completa");
