--- a/generarReporte.html
+++ b/generarReporte.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="util.js"></script>
     <script src="ProyectosManager.js"></script>
+    <script src="TableToCSV.js"></script>
 </head>
 <body>
 
@@ -36,7 +37,7 @@
                 </div>
             </form>
         </div>
-        <div id="resultado" class="container tab-pane fade"><br>
+        <div id="resultado" class="container tab-pane fade">
             <div id="resultado-reporte"></div>
         </div>
     </div>
