--- a/carteraProyectos.html
+++ b/carteraProyectos.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="util.js"></script>
   <script src="ProyectosManager.js"></script>
+  <script src="TableToCSV.js"></script>
 </head>
 <body>
     <div id="navbar"></div>
