--- a/carteraProyectos.html
+++ b/carteraProyectos.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="navbar"></div>
-    <div id="cartera-proyectos"></div>
+    <div id="cartera-proyectos" class="mt-3"></div>
 <script>
 addContentHTML('navbar','navbar.html');
 // Uso de la clase
