--- a/anexos/sinigmicys/index.html
+++ b/anexos/sinigmicys/index.html
@@ -1,5 +1,5 @@
-<h5><a target="_blank" href="anexos/sigetmar/Procesos y Procedimientos de la Direccion Gerencia de Operaciones.pdf">Documento</a></h5>
-<h3 class="text-center">PROCESOS Y PROCEDIMIENTOS DE LA DIRECCIÓN DE GERENCIA DE OPERACIONES</h3>
+<h5><a target="_blank" href="anexos/sinigmicys/ET Sala de Operaciones VP CyS Internacional v3.pdf">Documento</a></h5>
+<h3 class="text-center">ET Sala de Operaciones VP CyS Internacional</h3>
       <h1 class="mb-4">Resumen y Contenido del Documento</h1>
       <h2 class="mb-3">Contenido del Documento: "Servicio Especializado para la Sala de Operaciones de la Gerencia de Coordinación Operacional de la Vicepresidencia de Comercio y Suministro Internacional"</h2>
       <h3>Índice:</h3>
