--- a/anexos_sinigmicys.html
+++ b/anexos_sinigmicys.html
@@ -17,9 +17,21 @@
 <div class="container mt-3">
   <h2>SINIGMI-CyS - Anexos</h2>
   <div id="accordion">
+    <div class="card">
+      <div class="card-header">
+        <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+          Especificaciones Técnicas Sala de Operaciones
+        </a>
+      </div>
+      <div id="collapseOne" class="collapse" data-bs-parent="#accordion">
+        <div class="card-body" id="a1">
+           <script>addContentHTML('a1', 'anexos/sinigmicys/ET Sala de Operaciones VP CyS Internacional.html');</script>
+        </div>
+      </div>
+    </div>
 
   </div>
 </div>
-
+  
 </body>
 </html>
