--- a/estructurasOrganizacionales.html
+++ b/estructurasOrganizacionales.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organigrama Dinámico</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
+  <head>
+    <title>AIT Estructuras Organizacionales</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="util.js"></script>
+          <style>
         body {
             background-color: #f4f4f4;
             margin: 0;
@@ -48,8 +51,13 @@
             margin-top: 20px;
         }
     </style>
+
 </head>
 <body>
+
+<div id="navbar"></div>
+<script>addContentHTML('navbar','navbar.html');</script>
+    
     <h1>Estructuras Organizacionales</h1>
     
     <div class="container">
