--- a/navbar.html
+++ b/navbar.html
@@ -51,6 +51,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="generarReporte.html">Generador de reporte</a></li>
             <li><hr class="dropdown-divider"></hr></li>
+            <li><a class="dropdown-item" href="estructurasOrganizacionales.html">Estrucuras Organizacionales</a></li>
           </ul>
         </li>
       </ul>
