--- a/estructurasOrganizacionales.html
+++ b/estructurasOrganizacionales.html
@@ -25,15 +25,6 @@
             position: relative;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-        .oc_line {
-            width: 2px;
-            background-color: #ccc;
-            position: absolute;
-            top: -20px; 
-            left: 50%;
-            height: 20px;
-            transform: translateX(-50%);
-        }
         .oc_children {
             display: flex;
             justify-content: center;
@@ -49,6 +40,7 @@
     
     <div class="container">
           <h1>Estructuras Organizacionales</h1>
+      <div class="badge bg-primary">Asesores</div>
         <div class="org-chart" id="cypChart"></div>
         <div class="org-chart" id="galbaChart"></div>
         <div class="org-chart" id="tecnologiaChart"></div>
