--- a/estructurasOrganizacionales.html
+++ b/estructurasOrganizacionales.html
@@ -72,19 +72,19 @@
                     "hijos": [
                         {
                             "puesto": "Consultoria",
-                            "nombre": "J. Chavez",
+                            "nombre": "Oscar Mejias",
                         },
                         {
-                            "puesto": "AR",
-                            "nombre": "O. Mejias",
+                            "puesto": "Arquitectura",
+                            "nombre": "Leonardo Toussaint",
                         },
                         {
-                            "puesto": "Proy",
-                            "nombre": "F. Suárez",
+                            "puesto": "Proyectos",
+                            "nombre": "Francisco Suárez",
                         },
                         {
-                            "puesto": "Reg",
-                            "nombre": "",
+                            "puesto": "Reuerimientos",
+                            "nombre": "Martha García",
                         }
                     ]
                 },
