--- a/estructurasOrganizacionales.html
+++ b/estructurasOrganizacionales.html
@@ -83,7 +83,7 @@
                             "nombre": "Francisco Suárez",
                         },
                         {
-                            "puesto": "Reuerimientos",
+                            "puesto": "Requerimientos",
                             "nombre": "Martha García",
                         }
                     ]
