--- a/estructurasOrganizacionales.html
+++ b/estructurasOrganizacionales.html
@@ -103,7 +103,7 @@
 
         const galba = {
             "puesto": "Galba",
-            "nombre": "Omar Gomez",
+            "nombre": "Omar Gómez",
             "asesores": [
                 {
                     "puesto": "Arquitectura",
@@ -116,12 +116,12 @@
             ],
             "hijos": [
                 {
-                    "puesto": "Investigacion y Optimización",
+                    "puesto": "Investigación y Optimización",
                     "nombre": "Edgar Camargo",
                     "hijos": []
                 },
                 {
-                    "puesto": "Innovacion y Prospectiva",
+                    "puesto": "Innovación y Prospectiva",
                     "nombre": "Oliver Colmenarez",
                     "hijos": []
                 },
@@ -147,11 +147,11 @@
                 },
                 {
                     "puesto": "Integración",
-                    "nombre": "Yuleida Blanco",
+                    "nombre": "Yuleidi Blanco",
                     "hijos": []
                 },
                 {
-                    "puesto": "Implantacion de Soluciones",
+                    "puesto": "Implantación de Soluciones",
                     "nombre": "Douglas López",
                     "hijos": []
                 }
