--- a/estructurasOrganizacionales.html
+++ b/estructurasOrganizacionales.html
@@ -84,6 +84,7 @@
         const tecnologia = await leerJson('./tecnologia.json');
         if (tecnologia)  document.getElementById('tecnologiaChart').appendChild(createNode(tecnologia));
       }
+      organizationCharts();
     </script>
 </body>
 </html>
