--- a/estructurasOrganizacionales.html
+++ b/estructurasOrganizacionales.html
@@ -76,11 +76,11 @@
 
       const organizationCharts = async () =>  {
         const cyp = await leerJson('./cyp.json');
-        if (cyp)  document.getElementById('cypChart').appendChild(createNode(cyp[0]));
+        if (cyp)  document.getElementById('cypChart').appendChild(createNode(cyp));
         const galba = await leerJson('./galba.json');
-        if (galba)  document.getElementById('galbaChart').appendChild(createNode(galba[0]));
+        if (galba)  document.getElementById('galbaChart').appendChild(createNode(galba));
         const tecnologia = await leerJson('./tecnologia.json');
-        if (tecnologia)  document.getElementById('tecnologiaChart').appendChild(createNode(tecnologia[0]));
+        if (tecnologia)  document.getElementById('tecnologiaChart').appendChild(createNode(tecnologia));
       }
       organizationCharts();
     </script>
